# MeasureSuiteCommandLine

./: .gitignore  .gitmodules  CMakeLists.txt  MeasureSuiteCommandLine.py  README.md  build.sh  pyproject.toml  requirements.txt  setup.py  shell.nix
.github/workflows/: cmake.yml  publish.yml  pylint.yml  python-app.yml
MeasureSuiteCommandLine/: __init__.py  helper.py  libmeasuresuite.py  library.py  ms.py  msc.py  test.c
MeasureSuiteCommandLine.egg-info/: PKG-INFO  SOURCES.txt
src/: main.c
src/MeasureSuiteCommandLine/: main.c  ms.py
src/MeasureSuiteCommandLine/test/: test_main.c
test/: CMakeLists.txt  add_two_numbers2.asm  test.asm  test.c  test.s  test2.asm  test_library.py  test_ms.py  test_msc.py  ttest_wrapper.py
test/c/: test.c
